# gefyra-demos

./: deck.yaml
gefyra-tesocket/: Dockerfile  README.md  main.py  pyproject.toml
golang-demo/: README.md  deck.yaml  workload.yaml
golang-demo/app/: Dockerfile  go.mod  main.go
kcd-munich/: README.md
kcd-munich/backend/: Dockerfile  app.py  pyproject.toml
kcd-munich/frontend/: Dockerfile  app.py  pyproject.toml
kcd-munich/manifests/: demo.yaml
oauth2-demo/: initialize-kc.yaml  oauth2-demo.yaml
oauth2-demo/app/: Dockerfile  main.py  requirements.txt
