[tool.poetry]
name = "backened"
version = "0.1.0"
description = ""
authors = ["Robert Stein <robert@blueshoe.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
